feat: Introduce `jari-auth-service` with RabbitMQ messaging for user registration and update Java version to 21.